add baseline & line-height

--- a/pages/fairy/3d_photo.html
+++ b/pages/fairy/3d_photo.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>小仙女的专属 3D 旋转相册</title>
+    <title>3D 旋转相册</title>
     <meta name="viewport" content="initial-scale=1,maximum-scale=1, minimum-scale=1">
     <link rel="shortcut icon" href="./imgs/icon-heart.png" type="image/x-icon">
     <style>
@@ -221,19 +221,19 @@
     <div class="container center">
         <div class="wrap">
             <div class="content">
-                <div class="out-front"><img data-url="https://static-global.121learn.com/fairy-01.jpeg"></div>
-                <div class="out-back"><img data-url="https://static-global.121learn.com/fairy-02.jpeg"></div>
-                <div class="out-top"><img data-url="https://static-global.121learn.com/fairy-03.jpeg"></div>
-                <div class="out-bottom"><img data-url="https://static-global.121learn.com/fairy-04.jpeg"></div>
-                <div class="out-left"><img data-url="https://static-global.121learn.com/fairy-05.jpeg"></div>
-                <div class="out-right"><img data-url="https://static-global.121learn.com/fairy-06.jpeg"></div>
+                <div class="out-front"><img data-url=""></div>
+                <div class="out-back"><img data-url=""></div>
+                <div class="out-top"><img data-url=""></div>
+                <div class="out-bottom"><img data-url=""></div>
+                <div class="out-left"><img data-url=""></div>
+                <div class="out-right"><img data-url=""></div>
 
-                <span class="in-front">我</span>
-                <span class="in-right">爱</span>
-                <span class="in-top">你</span>
-                <span  class="in-left">小</span>
-                <span class="in-back">仙</span>
-                <span class="in-bottom">女</span>
+                <span class="in-front">1</span>
+                <span class="in-right">2</span>
+                <span class="in-top">3</span>
+                <span  class="in-left">4</span>
+                <span class="in-back">5</span>
+                <span class="in-bottom">6</span>
             </div>
         </div>
     </div>
@@ -244,14 +244,14 @@
     <div class="m-info">手指戳一下空白处 可使魔方还原哦</div>
     <div class="loading-container center">
         <div loading class="loading-01">页面加载有点慢...</div>
-        <div loading class="loading-02">就先给我家小仙女讲个 IT 界的笑话吧</div>
+        <div loading class="loading-02">就先给XXX讲个 IT 界的笑话吧</div>
         <div loading class="loading-03">客户：“这个图下班之前必须发给我！”</div>
         <div loading class="loading-04">设计师：“好的！”</div>
         <div loading class="loading-05">第二天清早。</div>
         <div loading class="loading-06">客户：“图怎么还没发过来？”</div>
         <div loading class="loading-07">设计师：“我还没下班呢...”</div>
         <div loading class="loading-08">呀，页面还没加载好呢</div>
-        <div loading class="loading-09">王沛快给我出来</div>
+        <div loading class="loading-09">XX快给我出来</div>
     </div>
     <script>
         var _time = 0;
