--- a/list/css/baseline_line-height.html
+++ b/list/css/baseline_line-height.html
@@ -20,6 +20,7 @@
 </head>
 <body>
     <section>
+        <i>说明：示例不支持移动端</i>
         <a href="#" class="h1">背景 & 概念</a>
         <p>先看一张来自维基百科的图，上面都是字体排印学的术语</p>
         <div style="text-align: center;">
