--- a/list/css/position.html
+++ b/list/css/position.html
@@ -33,7 +33,7 @@
             <li>如果元素的 position 值为 absolute，包含块则由最近的 以 position 值为 absolute、fixed或relative的祖先盒子建立：
                 <ul>
                     <li>如果这个祖先元素是行内元素，包含块则为该元素生成的第一个和最后一个行内框组成的包围框（在从左向右读的语言中，包含块的上边界和左边界是该祖先元素的中第一个行内框的上边界和左边界，包含块的下边界和右边界是该祖先元素中最后一个行内框的下边界和右边界）；</li>
-                    <li>如果这个祖先元素是块级元素，包含块则为该该元素的内容边界；</li>
+                    <li>如果这个祖先元素是块级元素，包含块则为该元素的内容边界；</li>
                     <li>如果没有这样的祖先元素，包含块则会初始包含块。</li>
                 </ul>
             </li>
@@ -100,7 +100,7 @@
         <a href="#" class="h2"><b>absolute</b></a>
         <ul>
             <li>在绝对定位模型中，绝对定位的盒子会被从常规流中完全移除，并相对于其包含块进行定位，包含块可能是 position 值为 relative、absolute、fixed的祖先元素也可能是初始包含块。</li>
-            <li>元素绝对定位后如果没有设置偏移属性，则会在定位在常规流中原始的位置。</li>
+            <li>元素绝对定位后如果没有设置偏移属性，则会定位在常规流中原始的位置。</li>
             <li>元素绝对定位后会生成一个块级框，而不论之前在常规流中是何种类型的框。</li>
             <article class="code">
                 <pre></pre>
